--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learningenglish",
   "version": "1.0.0",
-  "homepage": "https://gnad0722.github.io/",
+  "homepage": "https://gnad0722.github.io/EngGo",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
